# GFPGAN-ncnn-vulkan

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: build_devCI.yml  build_dev_fedora_lunar_vulkan.yml  build_dev_fedora_rpm_vulkan.yml  build_dev_macos.yml  build_dev_ubuntu.yml  build_dev_windows.yml  clang-format-check.yml  commit-lint.yml  release.yml
src/: .gitignore  CMakeLists.txt  demo.cpp  face.cpp  gfpgan-ncnn-vulkan-demo.cpp  gfpgan.cpp  realesrgan.cpp
src/gfpgan-ncnn-models/: README.md  pyproject.toml
src/gfpgan-ncnn-models/src/: GFPGANReconsitution.py  gfpgan_pth_to_onnx.py
src/include/: face.h  gfpgan.h  realesrgan.h
